k8s/manifests-d1142c/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-d1142c
  namespace: journee
  labels:
    app: journee-d1142c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-d1142c
  template:
    metadata:
      labels:
        app: journee-d1142c
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-d1142c
          image: gcr.io/my-docker-471807/journee:v5.7.0
          ports:
            - containerPort: 3000
